--- a/code/web/interface/themes/responsive/css/results-list.less
+++ b/code/web/interface/themes/responsive/css/results-list.less
@@ -138,9 +138,11 @@
 .result-title{
   font-weight: bold;
   font-size: 18px;
+  margin-top: 12px;
 }
 .result-index{
   font-size: 18px;
+  margin-top: 12px;
 }
 .result-tools-horizontal{
   margin-top: 6px;
@@ -157,14 +159,13 @@
   border-bottom: 1px solid #d5d6da;
 }
 .related-manifestations{
-  margin-top: 3px;
+  margin-top: 1px;
 }
 .related-manifestation.grouped {
   padding-top: 10px;
   padding-bottom: 10px;
   border: 1px solid #c3c3c3;
   border-radius: 8px;
-  margin-top: 1em;
 
   .col-sm-12 .row.displayed {
     padding-bottom: 1em;
@@ -289,11 +290,40 @@
     padding-right: 0;
   }
   #availabilityControl button {
-    .btn-sm();
+      padding: 5px 10px;
+      font-size: 12px;
+      line-height: 1.5;
+      border-radius: 3px;
+  }
+  @media (max-width:390px) {
+    #global,
+    #local,
+    #available {
+      padding: 1px 5px;
+      font-size: 10px;
+      line-height: 1.5;
+      border-radius: 3px;
+    }
   }
   //.title-rating {
   //  display: none;
   //}
+}
+@media (max-width:310px) {
+  #global, 
+  #local,
+  #available {
+      padding: 0px;
+      font-size: 8px;
+      line-height: 0.8;
+      min-height: 75px; 
+   }
+   #availabilityControlContainer {
+      border-bottom: 3px solid #d5d6da;
+      margin-top: 0;
+      min-height: 75px;
+      margin-bottom: 2px;
+     }
 }
 
 //// Hide Formats label when shown in modal pop-up
